# lv2_raw

./: .gitignore  COPYING  Cargo.toml  README.md  TODO  connect.sh  error  index.html  install.sh  jalvconnect.sh  tags  top.sh
benches/: bench.rs
brrrsynth.lv2/: brrrsynth.ttl  manifest.ttl
doc/: gulpfile.js  index.html
eg-amp_rust.lv2/: brrrsynth.ttl  manifest.ttl
examples/: blit.rs  frei_fig8.rs  rdft.rs
examples/eg-amp/: README.md  install.sh
examples/eg-amp/src/: lib.rs
examples/plot/: Cargo.toml
examples/plot/src/: lib.rs
host/: Cargo.toml  README.md  connect.sh  top.sh
host/scratchpaper/: websockets.rs
host/src/: jack.rs  jack_plugin.rs  main.rs
lv2/: COPYING  Cargo.toml
lv2/examples/eg-amp/: Cargo.toml
lv2/examples/eg-amp/eg-amp_rust.lv2/: eg-amp_rust.ttl  manifest.ttl
lv2/examples/eg-amp/src/: lib.rs
lv2/src/: lib.rs  myutils.rs  ui.rs
midi/: Cargo.toml  README.md
midi/src/: lib.rs
scratchpaper/: common.rs  gnuplot_example.rs  hoit.rs  lib_impulse.rs  tests.rs  tmp  utils.rs
scratchpaper/benches/: bench.rs
scripts/: merge_master.sh  subtree_branch.sh  subtree_diff.sh
src/: atom.rs  atomutils.rs  core.rs  coreutils.rs  heapslice.rs  lib.rs  lv2.rs  lv2_plugin.rs  lv2utils.rs  midi.rs  myutils.rs  oscillator.rs  oscillators.rs  plugin.rs  synth.rs  tests.rs  time.rs  ui.rs  urid.rs  utils.rs  voice.rs
test/: test.rs
tests/: gnuplot_example.rs  test.rs  testatomutils.rs  testutils.rs
ui/: Cargo.toml  README.md  install.sh
ui/client/: app.js  yassyclient.html
ui/src/: lib.rs  yassyui.rs
ui/yassyui.lv2/: manifest.ttl  yassyui.ttl
yassy.lv2/: manifest.ttl  yassy.ttl
