[package]
name = "yassy"
version = "0.1.0"
authors = ["stefan"]

# This workspace contains multiple crates. See http://doc.crates.io/manifest.html
#[workspace]
#members = ["./ui"]

[dependencies]
libc = "*"
GSL = "*"
midi = { path = "midi" }
lv2 = { path = "lv2" }

[lib]
name = "yassy"
crate-type = ["rlib","dylib"] # ?
# test = false # disable unit tests for this target unit. annoying output

[dev-dependencies] # for testing/documentation
gnuplot = "*"
getopts = "=0.2.14" # gnuplot dependency
plot = { path = "examples/plot" }


