[package]
name = "lv2_raw"
version = "0.2.0"
authors = ["poidl <hoitaus@gmail.com>"]
description = "Exposes the raw LV2 interface (C) to Rust. Also attempts to implement some idiomatic Rust concepts (e.g. iterators)."

# These URLs point to more information about the repository.
documentation = "https://docs.rs/lv2_raw/0.2.0/lv2_raw/"
homepage = "https://github.com/poidl/lv2_raw"
repository = "https://github.com/poidl/lv2_raw"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["lv2"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "ISC"

[dependencies]
libc = "0.2"
